Portfolio-html-outline

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://cdn.dribbble.com/userupload/12325784/file/original-bf2d846c4cef9a2275a10db50ce57da5.jpg?resize=752x">
     <title>Portfolio</title>
 </head>
 <body>
