--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <td width="75%">
                                 <font face="Arial" color="white" size="6">About me!</font>
                                 <hr color="white">
-                                <p align="top"><font size="5" face="Arial" color="white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor quo odit magni, eaque quas minima nobis dolorem blanditiis tenetur commodi! Excepturi quidem possimus voluptatum officiis commodi, asperiores libero exercitationem quam consequatur dolorem impedit, veritatis sit officia eaque voluptates vero, nesciunt in animi nisi. Earum atque voluptate eligendi quia? Modi animi deleniti dolor repudiandae? Nam eius sequi at hic voluptatibus! Vel reprehenderit voluptatum cum minima dolores ipsum veritatis cupiditate, voluptatibus exercitationem porro temporibus aspernatur quo in harum, aut nemo hic. Animi aliquam culpa vero delectus cupiditate! Illo amet porro labore nulla assumenda tempore et. Ratione, facere. Dolore natus odio, aliquam consequatur vitae minus voluptatibus quisquam ea ex quia vero. Culpa recusandae deserunt esse delectus, similique perferendis iusto quidem blanditiis quasi ipsum consequuntur modi provident accusamus sapiente facilis minus, vitae pariatur voluptas temporibus optio nihil hic! Quas fuga, temporibus nisi quae consectetur exercitationem laborum, saepe provident enim ipsum consequuntur modi cumque at.</font></p>
+                                <p align="top"><font size="5" face="Arial" color="white"><marquee behavior="" direction="up">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor quo odit magni, eaque quas minima nobis dolorem blanditiis tenetur commodi! Excepturi quidem possimus voluptatum officiis commodi, asperiores libero exercitationem quam consequatur dolorem impedit, veritatis sit officia eaque voluptates vero, nesciunt in animi nisi. Earum atque voluptate eligendi quia? Modi animi deleniti dolor repudiandae? Nam eius sequi at hic voluptatibus! Vel reprehenderit voluptatum cum minima dolores ipsum veritatis cupiditate, voluptatibus exercitationem porro temporibus aspernatur quo in harum, aut nemo hic. Animi aliquam culpa vero delectus cupiditate! Illo amet porro labore nulla assumenda tempore et. Ratione, facere. Dolore natus odio, aliquam consequatur vitae minus voluptatibus quisquam ea ex quia vero. Culpa recusandae deserunt esse delectus, similique perferendis iusto quidem blanditiis quasi ipsum consequuntur modi provident accusamus sapiente facilis minus, vitae pariatur voluptas temporibus optio nihil hic! Quas fuga, temporibus nisi quae consectetur exercitationem laborum, saepe provident enim ipsum consequuntur modi cumque at.</marquee></font></p>
                                 <hr color="white">
                             </td>
                         </tr>
@@ -47,7 +47,7 @@
                 <table bgcolor="white" border=0 cellspacing=0 cellpadding=20 width="100%">
                     <tbody align="center">
                         <tr align="center">
-                            <td colspan="6"><font face="Arial" size="6">Skills</font><hr width="100" color="black"></td>
+                            <td colspan="6"><font face="Arial" size="6">Skills</font><hr width="25%" color="black"></td>
                         </tr>
                         <tr>
                             <td width="25">
@@ -121,21 +121,21 @@
                 <table bgcolor="black" border=0 cellspacing=0 cellpadding=20 width="100%">
                     <tbody>
                         <tr align="center">
-                            <td colspan="6"><hr width="100%" color="white"><font face="Arial" color="white" size="6">Achievements</font><hr width="550" color="white"></td>
+                            <td colspan="6"><hr width="100%" color="white"><font face="Arial" color="white" size="6">Achievements</font><hr width="25%" color="white"></td>
                         </tr>
                         <tr>
-                            <td width="20%"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></td>
-                            <td width="20%"><img width="100%" src="Assets/REC (1).jpeg"></td>
-                            <td width="20%"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></td>
-                            <td width="20%"><img width="100%" src="Assets/REC (1).jpeg"></td>
-                            <td width="20%"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></td>
+                            <td width="20%"><marquee behavior="scroll" direction="down"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></marquee></td>
+                            <td width="20%"><marquee behavior="" direction="down"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></marquee></td>
+                            <td width="20%"><marquee behavior="" direction="down"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></marquee></td>
+                            <td width="20%"><marquee behavior="" direction="down"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></marquee></td>
+                            <td width="20%"><marquee behavior="" direction="down"><img width="100%" src="Assets/AGNI CLG OF TECH.jpeg"></marquee></td>
                         </tr>
                     </tbody>
                 </table>
                 <table bgcolor="black" border=0 cellspacing=0 cellpadding=20 width="100%">
                     <tbody>
                         <tr align="center">
-                            <td colspan="2"><hr width="100%" color="white"><font face="Arial" color="white" size="6">Contact me!</font><hr width="250" color="white"></td>
+                            <td colspan="2"><hr width="100%" color="white"><font face="Arial" color="white" size="6">Contact me!</font><hr width="25%" color="white"></td>
                         </tr>
                         <tr align="center">
                             <td width="45%" align="right">
@@ -148,6 +148,9 @@
                                 <input type="text" placeholder="Enter your Email"><br><br>
                                 <textarea name="" id=""></textarea>
                             </td>
+                        </tr>
+                        <tr align="center">
+                            <td colspan="2"><input type="submit" value="Send!"></td>
                         </tr>
                     </tbody>
                 </table>
