--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <td><font face="Arial" size="4" color="white">Skills</font></td>
                             <td><font face="Arial" size="4" color="white">Achievements</font></td>
                             <td><font face="Arial" size="4" color="white">About</font></td>
-                            <td><font face="Arial" size="4" color="white">Comtact me!</font></td>
+                            <td><font face="Arial" size="4" color="white">Contact me!</font></td>
                         </tr>
                     </tbody>
                 </table>
